--- a/CHANGES
+++ b/CHANGES
@@ -5,5 +5,8 @@ PyX
   - allow division of length by numbers
   - return linewidth upon calculation with linewidths
 
+0.1.1 (????/??/??):
+  - transformation bug fixed (#624068)
+
 0.1 (2002/10/07):
   - initial release
