fix canvas transformations
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@539 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ PyX
   - small logo modifications
   - allow division of length by numbers
   - return linewidth upon calculation with linewidths
+  - fix canvas transformations
 
 0.1.1 (????/??/??):
   - transformation bug fixed (#624068)
