started some work on 3d graphs
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@543 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ PyX
   - allow division of length by numbers
   - return linewidth upon calculation with linewidths
   - fix canvas transformations
+  - 3d graphs (work in progress)
 
 0.1.1 (????/??/??):
   - transformation bug fixed (#624068)
