--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ PyX
   - return linewidth upon calculation with linewidths
   - fix canvas transformations
   - 3d graphs (work in progress)
+  - new transformation: slant
 
 0.1.1 (????/??/??):
   - transformation bug fixed (#624068)
