bugfix in (not yet documented) "user space" textbox alignment
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@554 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ PyX
   - fix canvas transformations
   - 3d graphs (work in progress)
   - new transformation: slant
+  - bugfix in textbox alignment (graph module)
 
 0.1.1 (????/??/??):
   - transformation bug fixed (#624068)
