mathtree: extern variables and functions, test suite
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@563 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,9 @@ PyX
     - move axis partitioning into the axis painter (work in progress)
     - bugfix in textbox alignment (graph module)
     - mark class renamed to symbol
+  - mathtree:
+    - extern variables and functions
+    - tests
 
 0.1.1 (????/??/??):
   - transformation bug fixed (#624068)
