running TeX "on the fly" is basically implemented
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@572 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ PyX
     - testsuite
   - text module:
     - is it TODO for 0.2 ???
+    - running TeX "on the fly" is basically implemented
   - numerous bugfixes (remove detailed list?):
     - transformation bug (#624068, trafo module)
     - canvas transformations (canvas module???)
